# Face-Recognition-Attendance-System

./: .gitignore  README.md  add_faces.py  app.py  attendance.py  pyproject.toml
