[project]
name = "face-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pywin32>=311",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
    "streamlit-autorefresh>=1.0.1",
]
